--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mapbox-gl": "^2.6.0",
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
     "turbolinks": "^5.2.0",
     "typed.js": "^2.0.12",
     "webpack": "^4.46.0",
